<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_Layout"
    tools:context=".DietPlansClasses.DietPlanner">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/main_toolbar"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diet_planner_header"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:background="#0099FF"
            android:layout_marginTop="0sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="15dp"
                android:text="Name:"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_marginTop="13dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="Average Calorie Consumption:"/>

            <TextView
                android:id="@+id/avg_cal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="135dp"
                android:textSize="15dp"
                android:text="0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="68dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="Proteins:"/>

            <TextView
                android:id="@+id/avg_prot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="221dp"
                android:textSize="15dp"
                android:text="0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="68dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="Carbohydrates:"/>

            <TextView
                android:id="@+id/avg_carb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="179dp"
                android:textSize="15dp"
                android:text="0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="68dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="Fats:"/>

            <TextView
                android:id="@+id/avg_fats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="248dp"
                android:textSize="15dp"
                android:text="0"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:layout_marginTop="5dp"
            android:background="#0099FF" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="422dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#0099FF"
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/monday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:text="@string/monday"
                        android:textSize="15dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1sp"
                        android:layout_marginTop="5dp"
                        android:background="#FFFFFF" />

                    <Button
                        android:id="@+id/add_monday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="295dp"
                        android:text="Edit"
                        android:textColor="#0099FF"
                        app:backgroundTint="#FFFFFF" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#0099FF"
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/tuesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:text="@string/tuesday"
                        android:textSize="15dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1sp"
                        android:layout_marginTop="5dp"
                        android:background="#FFFFFF" />

                    <Button
                        android:id="@+id/add_tuesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="295dp"
                        android:text="Edit"
                        android:textColor="#0099FF"
                        app:backgroundTint="#FFFFFF" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#0099FF"
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/wendesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:text="@string/wednesday"
                        android:textSize="15dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1sp"
                        android:layout_marginTop="5dp"
                        android:background="#FFFFFF" />

                    <Button
                        android:id="@+id/add_wendesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="295dp"
                        android:text="Edit"
                        android:textColor="#0099FF"
                        app:backgroundTint="#FFFFFF" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#0099FF"
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/thursday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:text="@string/thursday"
                        android:textSize="15dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1sp"
                        android:layout_marginTop="5dp"
                        android:background="#FFFFFF" />

                    <Button
                        android:id="@+id/add_thursday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="295dp"
                        android:text="Edit"
                        android:textColor="#0099FF"
                        app:backgroundTint="#FFFFFF" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#0099FF"
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/friday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:text="@string/friday"
                        android:textSize="15dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1sp"
                        android:layout_marginTop="5dp"
                        android:background="#FFFFFF" />

                    <Button
                        android:id="@+id/add_friday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="295dp"
                        android:text="Edit"
                        android:textColor="#0099FF"
                        app:backgroundTint="#FFFFFF" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#0099FF"
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/saturday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:text="@string/saturday"
                        android:textSize="15dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1sp"
                        android:layout_marginTop="5dp"
                        android:background="#FFFFFF" />

                    <Button
                        android:id="@+id/add_saturday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="295dp"
                        android:text="Edit"
                        android:textColor="#0099FF"
                        app:backgroundTint="#FFFFFF" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#0099FF"
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/sunday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="#FFFFFF"
                        android:text="@string/sunday"
                        android:textSize="15dp"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1sp"
                        android:layout_marginTop="5dp"
                        android:background="#FFFFFF" />

                    <Button
                        android:id="@+id/add_sunday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="295dp"
                        android:text="Edit"
                        android:textColor="#0099FF"
                        app:backgroundTint="#FFFFFF" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/dp_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="#0099FF"
                android:text="CONFIRM"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="300sp"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <include
            layout="@layout/main_nav_drawer"/>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>